# stsc_on_cpp

./: .gitignore  CMakeLists.txt  README.md  _gcc_gen.sh  _msvc_gen_2005_64.bat  _msvc_gen_2010_64.bat  _xcode_gen.sh  history.txt
_cmake_scripts/: Findboost_process.cmake  utils.cmake
data/stock_list/: full_yahoo_finance_stock_list.txt  yahoo_finance_stock_list.txt  yahoo_stock_list_with_names_nasdaq.txt
sources/algorithm_storage/: CMakeLists.txt  signal_vector.cpp  signal_vector.h  strategies_engine.cpp  strategies_engine.h
sources/common/: CMakeLists.txt  bar_data_adapter.cpp  bar_data_adapter.h  bar_types.cpp  bar_types.h  signal_types.cpp  signal_types.h  time_helper.cpp  time_helper.h
sources/common/common/: bar_data_adapter.h  bar_types.cpp  bar_types.h  signal_types.cpp  time_helper.cpp  types.cpp  types.h
sources/datafeed/: CMakeLists.txt  binary_format.h  binary_reader.cpp  binary_reader.h  binary_writer.cpp  binary_writer.h  datafeed_manager.cpp  datafeed_manager.h  datafeed_processor.cpp  datafeed_processor.h  eod_datafeed_spitter.cpp  eod_datafeed_spitter.h  eod_datafeed_storage.cpp  eod_datafeed_storage.h  stock_datafeed.cpp  stock_datafeed.h  stock_datafeed_processor.cpp  stock_datafeed_processor.h
sources/datafeed/binary/: format.h  reader.cpp  reader.h  writer.cpp  writer.h
sources/datafeed/csv/: yahoo_finance_reader.cpp  yahoo_finance_reader.h  yahoo_finance_reader_to_binary_processor.cpp  yahoo_finance_reader_to_binary_processor.h
sources/engine/: CMakeLists.txt  algorithm.cpp  algorithm.h  algorithm_manager.cpp  algorithm_manager.h  algorithm_prototype.cpp  algorithm_prototype.h  algorithm_storage.cpp  algorithm_storage.h  algorithms_storage.cpp  algorithms_storage.h  on_bar_algorithm_prototype.h  on_period_algorithm_prototype.h  on_stock_algorithm_prototype.h  signal_vector.cpp  signal_vector.h  signals_storage.cpp  signals_storage.h  simulation_configuration.cpp  simulation_configuration.h  simulator.cpp  simulator.h  strategies_engine.cpp  strategies_engine.h
sources/engine/algorithms/: moving_median.cpp  moving_median.h  moving_median_indicator.cpp  moving_median_indicator.h  moving_median_series.cpp  moving_median_series.h
sources/engine/algorithms_storage/: algorithm.cpp  algorithm.h  algorithm_init.cpp  algorithm_init.h  algorithm_prototype.cpp  algorithm_prototype.h  algorithms.cpp  algorithms.cpp_  algorithms.h  algorithms.h_  algorithms_engine.cpp  algorithms_engine.h  on_bar_algorithm.h  on_period_algorithm.h  on_stock_algorithm.cpp  on_stock_algorithm.h
sources/engine/series_storage/: map_serie.h  on_bar_serie.cpp  on_bar_serie.h  on_period_serie.cpp  on_period_serie.h  on_stock_serie.cpp  on_stock_serie.h  serie.cpp  serie.h  serie_subscription.cpp  serie_subscription.h  series.cpp  series.h  series_storage.h  vector_serie.h
sources/engine/signal_storages/: map_serie.h  serie.cpp  serie.h  serie_prototype.cpp  serie_prototype.h  series_storage.cpp  series_storage.h  vector_serie.h
sources/yahoo_finance_to_binary_data/: CMakeLists.txt  yahoo_finance_to_binary_data.cpp
tests/algorithm_storage_tests/: CMakeLists.txt  algorithm_examples.cpp  algorithm_examples.h  signal_vector_tests.cpp  strategies_engine_tests.cpp  test_registrator.cpp  test_registrator.h
tests/common_tests/: CMakeLists.txt  bar_data_adapter_tests.cpp  bar_types_tests.cpp  signal_types_tests.cpp  test_registrator.cpp  test_registrator.h  (+1 more)
tests/datafeed_tests/: CMakeLists.txt  binary_format_tests.cpp  csv_yahoo_finance_reader_tests.cpp  eod_datafeed_spitter_tests.cpp  eod_datafeed_storage_tests.cpp  test_registrator.cpp  test_registrator.h  yahoo_finance_reader_tests.cpp  yahoo_finance_reader_to_binary_processor_tests.cpp
tests/engine_tests/: CMakeLists.txt  algorithm_examples.cpp  algorithm_examples.h  algorithm_manager_tests.cpp  algorithm_prototype_tests.cpp  moving_median_indicator_tests.cpp  signal_vector_tests.cpp  signals_storage_tests.cpp  simulation_configuration_tests.cpp  simulator_tests.cpp  strategies_engine_tests.cpp  test_registrator.cpp  test_registrator.h
tests/engine_tests/algorithms/: moving_median_indicator_tests.cpp  moving_median_series_tests.cpp  moving_median_tests.cpp
tests/engine_tests/algorithms_storage/: algorithm_examples.cpp  algorithm_examples.h  algorithm_prototype_tests.cpp  algorithm_storage_tests.cpp  algorithms_engine_tests.cpp  on_bar_algorithm_tests.cpp  on_period_algorithm_tests.cpp  on_stock_algorithm_tests.cpp
tests/engine_tests/series_storage/: map_serie_tests.cpp  on_bar_serie_tests.cpp  on_period_serie_tests.cpp  on_stock_serie_tests.cpp  serie_subscription_tests.cpp  series_tests.cpp  vector_serie_tests.cpp
tests/engine_tests/signal_storages/: map_serie_tests.cpp  vector_serie_tests.cpp
(+33 files in other folders)
